# rasterm

./: .gitignore  Cargo.toml  LICENSE  demo-record.sh  readme.md
.planning/notes/: 2026-03-25-screenshot-readme.md
src/: lib.rs  main.rs
src/engine/: mod.rs
src/engine/animation/: mod.rs
src/engine/raster/: clip.rs  depth.rs  mod.rs  rasterizer.rs  shader.rs  vertex.rs
src/engine/render/: camera.rs  geometry.rs  material.rs  mesh.rs  mod.rs  object.rs  primitives.rs  renderer.rs  scene.rs  shaders.rs  texture.rs
src/engine/terminal/: ascii.rs  color.rs  mod.rs
src/loader/: mod.rs  obj.rs
tests/: integration_test.rs
